--- a/SI.qmd
+++ b/SI.qmd
@@ -20,7 +20,7 @@ library(gt)
 
 ## Supplementary Information
 
-### Supplementary Figure 1: Warming effects on the microclimate 
+### Supplementary Figure 1: Temperature effects on the microclimate 
 <!-- 2021 was the warmest and driest year with an average air temperature of 10.18 °C and 0.25 % soil moisture content. -->
 
 <!-- 2019 was the coldest and wettest year with an average air temperature of 6.18 °C and 0.4 % soil moisture content (Supplement Figure S1). -->
@@ -28,22 +28,10 @@ library(gt)
 ```{r}
 #| label: fig-daily-climate
 #| warning: false
-#| fig-cap: a) Daily microclimate values, measured over the period of the experiment in the alpine and sub-alpine sites and b) average summer microclimate between May and September. Shown are air (30 cm), ground (0 cm), soil temperature (-5 cm), and soil moisture measured with Tomst loggers between August 2019 and October 2022. Colour indicates the ambient (gray) and warming (pink) treatment. Air, ground and soil temperature were higher and soil moisture was lower in the warming treatment, indicated by the star.
-
+#| fig-cap: a) Daily temperature and soil moisture values, measured over the period of the experiment in the alpine and sub-alpine sites and b) average summer temperature and soil moisture between May and September. Shown are air (30 cm), ground (0 cm), soil temperature (-5 cm), and soil moisture measured with Tomst loggers between August 2019 and October 2022. Colour indicates the ambient (grey) and warming (pink) treatment. Air, ground and soil temperature were higher and soil moisture was lower in the warming treatment, indicated by the star in each panel.
 
 tar_load(daily_climate_figure)
 daily_climate_figure
-
-```
-
-### Supplementary Table 1: Warming effects on the microclimate 
-
-```{r}
-#| label: tbl-climate-test
-#| tbl-cap: Results from linear regression of the effects of warming on nutrient air, ground, soil temperature and soilmoisture at the alpine and sub-alpine site. Shown are estimates, standard error, t statistics and P value.
-
-tar_load(microclimate_stats)
-microclimate_stats
 
 ```
 
@@ -54,22 +42,31 @@ microclimate_stats
 #| label: fig-prod-consumption 
 #| warning: false
 #| #| fig-height: 4
-#| fig-cap: a) Annual productivity in grazed and ungrazed (cage) plots between June and September 2022. b) Annual biomass consumption (biomass in ungrazed - grazed plots) between June and September 2022. Colors indicate grazed (yellow) and ungrazed (caged; gray) plots. Annual productivity and biomass consumption at each site was estimated using three 30 x 30 cm cages and control plots. The cages were designed to exclude mammal herbivores, but not insects, with a mesh size of 1 cm. The plots were moved every 15.5 ± 0.447 days, and the biomass in each plot was harvested 2-3 cm above the ground, dried at 65°C for 72h and weighed.
-
+#| fig-cap: Annual productivity (mg m^-2^ y^-1^) and biomass consumption (mg m^-2^ y^-1) at the three study sites. Colors indicate grazed (yellow) and ungrazed (caged; gray) plots. Productivity and biomass consumption by grazers was assessed using three 30 x 30 cm cages (ungrazed) and according control plots (grazed). The cages were designed to exclude mammal herbivores, but not insects, with a mesh size of 1 cm. The plots were moved every 15.5 ± 0.447 days, and the biomass in each plot was harvested 2-3 cm above the ground, dried at 65°C for 72h and weighed. 
 
 tar_load(productivity_consumption_figure)
 productivity_consumption_figure
 
 ```
 
+### Supplementary Table 1: Temperature effects on the microclimate
 
-### Supplementary Table 2: Standing Biomass
+```{r}
+#| label: tbl-climate-test
+#| tbl-cap: Results from linear regression of the effects of warming on air, ground, and soil temperature and soilmoisture at the alpine and sub-alpine communities. Shown are estimates, standard error, t statistics and P value.
+
+
+tar_load(microclimate_stats)
+microclimate_stats
+
+```
+
+### Supplementary Table 2: Standing Biomass statistics
 
 ```{r}
 #| label: tbl-biomass
 #| warning: false
-#| tbl-cap: Anova table of the effects of warming, nitrogen addition, grazing, and their interactions on standing biomass at the alpine and sub-alpine communities. Shown are sum of squares, degrees of freedom (df), F statistics and P value and significant terms (P < 0.05) are in bold.
-
+#| tbl-cap: Anova table of the effects of warming, nitrogen addition, grazing, and their interactions on annual productivity at the alpine and sub-alpine communities. Shown are sum of squares, degrees of freedom (df), F statistics and P value. Significant terms (P < 0.05) are in bold.
 
 tar_load(biomass_stats)
 biomass_stats
@@ -77,12 +74,12 @@ biomass_stats
 ```
 
 
-### Supplementary Figure 3: Annual productivity
+### Supplementary Figure 3: Annual plant productivity and global change
 
 ```{r}
 #| label: fig-productivity 
 #| warning: false
-#| fig-cap: Global change impacts on annual plant productivity. Annual productivity (g m-2 y-1) between 2019 (before treatment) and 2022 (after three years of treatment) with increasing nitrogen addition (kg N ha-1 y-1) in the alpine (upper row) and sub-alpine (lower row) communities. Productivity is calculated as the sum of standing biomass in the simulated grazing treatments collected over the whole growing season and is compared to the biomass in the control plots at peak growing season. The x axis is log transformed to better visualize lower nitrogen values, the numbers are on the original scale for ease of interpretation. The colors indicate ambient (gray) and warm conditions (pink) and the shapes show the different grazing treatments, control (circle), medium (square), and intensive grazing (triangle). The points show the raw data, while the lines indicate model predictions with confidence intervals. The letters in black indicate significant model terms and in gray marginal significant model terms.
+#| fig-cap: Global change impacts on annual plant productivity. Annual productivity (g m^-2^ y^-1^ between 2019 (before treatment) and 2022 (after three years of treatment) with increasing nitrogen addition (kg N ha^-1^ y^-1^) in the alpine (upper row) and sub-alpine (lower row) communities. Productivity is calculated as the sum of standing biomass in the simulated grazing treatments collected over the whole growing season and is compared to the biomass in the control plots at peak growing season. The x axis is log transformed, the numbers are on the original scale for ease of interpretation. The colors indicate ambient (grey) and warm conditions (pink) and the shapes show the different grazing treatments (circle = control, square = medium, triangle = intensive grazing). The points show the raw data, while the lines indicate model predictions with confidence intervals. The capital letters within panels indicate significant (black) and marginal significant model terms (W = warming, G = grazing, N = nitrogen addition). significant model terms.
 
 tar_load(productivity_figure)
 productivity_figure
@@ -94,7 +91,7 @@ productivity_figure
 ```{r}
 #| label: tbl-productivity
 #| warning: false
-#| tbl-cap: Anova table of the effects of warming, nitrogen addition, grazing, and their interactions on annual productivity at the alpine and sub-alpine communities. Shown are sum of squares, degrees of freedom (df), F statistics and P value and significant terms (P < 0.05) are in bold.
+#| tbl-cap: Anova table of the effects of warming, nitrogen addition, grazing, and their interactions on annual productivity at the alpine and sub-alpine communities. Shown are sum of squares, degrees of freedom (df), F statistics and P value. Significant terms (P < 0.05) are in bold.
 
 tar_load(productivity_stats)
 productivity_stats
@@ -107,8 +104,8 @@ productivity_stats
 ```{r}
 #| label: tbl-cover
 #| warning: false
-#| tbl-cap: Anova table of the effects of warming, nitrogen addition, grazing, and their interactions on functional group cover at the alpine and sub-alpine communities. Shown are sum of Squares, degrees of freedom (df), F statistics and P value and significant terms (P < 0.05) are in bold. Other refer to sedges in the alpine and legumes in the sub-alpine community.
-
+#| tbl-cap: Anova table of the effects of warming, nitrogen addition, grazing, and their interactions on functional group cover at the alpine and sub-alpine communities. Shown are sum of squares, degrees of freedom (df), F statistics and P value. Significant terms (P < 0.05) are in bold. Other refer to sedges in the alpine and legumes in the sub-alpine community.
+#| 
 tar_load(cover_stats)
 cover_stats
 
@@ -123,7 +120,6 @@ cover_stats
 #| fig-height: 5
 #| fig-cap: Proportion of biomass per plant functional group at peak growing season in 2022. Shown are the proportion of shrubs, graminoids (grasses and rushes), Cyperaceae (mostly Carex species), forbs, legumes, bryophytes, and litter, for the different nitrogen addition treatments in non-grazed (Control), medium and intensive grazed plots. The two top rows are the ambient and warmed plots in the alpine site, while the two lower rows are ambient and warmed plots at the subalpine site. The general pattern is that graminoids increase and forbs decrease with higher nitrogen addition treatment.
 
-
 tar_load(biomass_fun_group)
 biomass_fun_group
 
@@ -137,7 +133,8 @@ biomass_fun_group
 #| warning: false
 #| message: false
 #| fig-width: 10
-#| fig-cap: Global change impact on available nutrients. Available nutrients in 2021 with increasing nitrogen addition (kg N ha^-1y^-1) at the alpine (upper row) and sub-alpine (lower row) site. The x axis is log transformed to better visualize lower nitrogen values, but the numbers on the x axis are on the original scale for better interpretation of the data. The colors indicate ambient (gray) and warm conditions (pink) and the shapes show the different grazing treatments (round = control, square = medium, triangle = intensive grazing). The points show the data, while the lines indicate model predictions with confidence intervals. Letters in the upper left or right corner indicate significant model terms.
+#| fig-cap: Global change impact on available nutrients. Available nutrients in 2021 with increasing nitrogen addition (kg N ha^-1^ y^-1^) at the alpine (upper row) and sub-alpine (lower row) communities. The x axis is log transformed, the numbers are on the original scale for ease of interpretation. The colors indicate ambient (grey) and warm conditions (pink) and the shapes show the different grazing treatments (round = control, square = medium, triangle = intensive grazing). The points show the data, while the lines indicate model predictions with confidence intervals. The capital letters within panels indicate significant model terms (W = warming, G = grazing, N = nitrogen addition).
+
 
 
 tar_load(nutrient_figure)
@@ -150,7 +147,7 @@ nutrient_figure
 
 ```{r}
 #| label: tbl-nutrients
-#| tbl-cap: Anova table of the effects of warming, nitrogen addition, grazing, and their interactions on available nutrients at the alpine and sub-alpine communities. Shown are sum of Squares, degrees of freedom (df), F statistics and P value and significant terms (P < 0.05) are in bold.
+#| tbl-cap: Anova table of the effects of warming, nitrogen addition, grazing, and their interactions on available nutrients at the alpine and sub-alpine communities. Shown are sum of squares, degrees of freedom (df), F statistics and P value. Significant terms (P < 0.05) are in bold.
 
 tar_load(nutrients_stats)
 nutrients_stats
@@ -164,7 +161,7 @@ nutrients_stats
 ```{r}
 #| label: fig-cover-CN
 #| warning: false
-#| fig-cap: Change in functional group cover. The figure shows change in graminoid and forb cover, and separately for sedge or legume cover between 2019 (before treatment) and 2022 (after three years of treatment) with increasing nitrogen addition (kg N ha-1 y-1) in the alpine (upper row) and sub-alpine (lower row) communities. Positive numbers indicate an increase and negative numbers a decrease in functional group cover. The x axis is log transformed to better visualize lower nitrogen values, but the numbers on the x axis are on the original scale for better interpretation of the data. The colours indicate ambient (gray) and warm conditions (pink) and the shapes show the different grazing treatments (round = control, square = natural grazing). The points show the data, while the lines indicate model predictions with confidence intervals. The letters in black indicate significant model terms, and letters in gray show marginal significant terms.
+#| fig-cap: Change in functional group cover. The figure shows change in graminoid and forb cover, and separately for sedge or legume cover between 2019 (before treatment) and 2022 (after three years of treatment) with increasing nitrogen addition (kg N ha^-1^ y^-1^) in the alpine (upper row) and sub-alpine (lower row) communities. Positive numbers indicate an increase and negative numbers a decrease in functional group cover. The x axis is log transformed, the numbers are on the original scale for ease of interpretation. The colours indicate ambient (grey) and warm conditions (pink) and the shapes show the different grazing treatments (round = control, square = natural grazing). The points show the data, while the lines indicate model predictions with confidence intervals. The capital letters within panels indicate significant (black) and marginal significant (grey) model terms (W = warming, G = grazing, N = nitrogen addition).
 
 tar_load(cover_CN_figure)
 cover_CN_figure
@@ -176,7 +173,7 @@ cover_CN_figure
 
 ```{r}
 #| label: tbl-cover-CN
-#| tbl-cap: Anova table of the effects of warming, nitrogen addition, natural grazing, and their interactions on functional group cover at the alpine and sub-alpine communities. Shown are sum of Squares, degrees of freedom (df), F statistics and P value and significant terms (P < 0.05) are in bold. Other refer to sedges in the alpine and legumes in the sub-alpine community.
+#| tbl-cap: Anova table of the effects of warming, nitrogen addition, natural grazing, and their interactions on functional group cover at the alpine and sub-alpine communities. Shown are sum of squares, degrees of freedom (df), F statistics and P value. Significant terms (P < 0.05) are in bold. Other refer to sedges in the alpine and legumes in the sub-alpine community.
 
 tar_load(CN_cover_stats)
 CN_cover_stats
@@ -189,7 +186,7 @@ CN_cover_stats
 ```{r}
 #| label: fig-diversity-CN
 #| warning: false
-#| fig-cap: Change in diversity indices in response to global change. Change in diversity indices (richness, diversity and evenness) between 2019 (before treatment) and 2022 (after three years of treatment) with increasing nitrogen addition (kg N ha-1 y-1) in the alpine (upper row) and sub-alpine (lower row) communities. Positive numbers indicate an increase and negative numbers a decrease in the diversity index. The x axis is log transformed to better visualize lower nitrogen values, but the numbers on the x axis are on the original scale for better interpretation of the data. The colors indicate ambient (gray) and warm conditions (pink) and the shapes show the different grazing treatments (round = control, square = natural grazing). The points show the data, while the lines indicate model predictions with confidence intervals. The letters indicate significant model terms.
+#| fig-cap: Change in diversity indices in response to global change. Change in diversity indices (richness, diversity and evenness) between 2019 (before treatment) and 2022 (after three years of treatment) with increasing nitrogen addition (kg N ha^-1^ y^-1^) in the alpine (upper row) and sub-alpine (lower row) communities. Positive numbers indicate an increase and negative numbers a decrease in the diversity index. The x axis is log transformed, the numbers are on the original scale for ease of interpretation. The colors indicate ambient (gray) and warm conditions (pink) and the shapes show the different grazing treatments (round = control, square = natural grazing). The points show the data, while the lines indicate model predictions with confidence intervals. The capital letters within panels indicate significant (black) and marginal significant (grey) model terms (W = warming, G = grazing, N = nitrogen addition).
 
 tar_load(diversity_CN_figure)
 diversity_CN_figure
@@ -201,8 +198,7 @@ diversity_CN_figure
 
 ```{r}
 #| label: tbl-div-CN
-#| tbl-cap: Anova table of the effects of warming, nitrogen addition, natural grazing, and their interactions on species richness, diversity and evenness at the alpine and sub-alpine communities. Shown are sum of Squares, degrees of freedom (df), F statistics and P value and significant terms (P < 0.05) are in bold.
-
+#| tbl-cap: Anova table of the effects of warming, nitrogen addition, natural grazing, and their interactions on species richness, diversity and evenness at the alpine and sub-alpine communities. Shown are sum of Squares, degrees of freedom (df), F statistics and P value. Significant terms (P < 0.05) are in bold.
 
 tar_load(CN_diversity_stats)
 CN_diversity_stats
@@ -215,7 +211,7 @@ CN_diversity_stats
 ```{r}
 #| label: fig-climate
 #| warning: false
-#| fig-cap: Global change impact on microclimate. Average summer (June - Spetember) air, ground soil temperture and soil moisture over between 2019 and 2022 with increasing nitrogen addition (kg N ha^-1^ y^-1^) at the alpine (upper row) and sub-alpine (lower row) sites. The x axis is log transformed to better visualize lower nitrogen values, but the numbers on the x axis are on the original scale for better interpreation of the data. The colours indicate ambient (grey) and warm conditions (pink) and the shapes show the different grazing treatments (round = control, square = medium, triangle = intensive grazing). The points show the data, while the lines indicate model predictions with confidence intervals. Letters indicate significant model terms.
+#| fig-cap: Global change impact on microclimate. Average summer (June - September) air, ground soil temperature and soil moisture between 2019 and 2022 with increasing nitrogen addition (kg N ha^-1^ y^-1^) at the alpine (upper row) and sub-alpine (lower row) site. The x axis is log transformed, the numbers are on the original scale for ease of interpretation. The colors indicate ambient (gray) and warm conditions (pink) and the shapes show the different grazing treatments (circle = control, square = medium, triangle = intensive grazing). The points show the raw data, while the lines indicate model predictions with confidence intervals. The capital letters within panels indicate significant model terms (W = warming).
 
 tar_load(climate_figure)
 climate_figure
@@ -226,7 +222,7 @@ climate_figure
 
 ```{r}
 #| label: tbl-climate
-#| tbl-cap: Results from linear regression of the effects of warming, grazing and nitrogen addition on microclimate (air, ground, soil temperature and soilmoisture) at the alpine and sub-alpine communities. Shown are sum of squares, degrees of freedom (df), F statistics and P value.
+#| tbl-cap: Anova table of the effects of warming, nitrogen addition, grazing, and their interactions on air, ground and soil temperature and soilmoisture at the alpine and sub-alpine communities. Shown are sum of Squares, degrees of freedom (df), F statistics and P value. Significant terms (P < 0.05) are in bold.
 
 tar_load(climate_stats)
 climate_stats
